parsing en js et c#, prendre celui qui est le mieux

--- a/interface.html
+++ b/interface.html
@@ -94,6 +94,9 @@
 
     <div class="settings">
         <div class="button-container">
+
+            <input id="mail" type="file" name="mail" accept="text/plain" />
+            <!-- access input file (js): const selectedFile = document.getElementById("mail").files[0]; -->
             <button class="custom-button">Phishing</button>
             <button class="custom-button">Malware</button>
             <button class="custom-button">Scam</button>
